[project]
name = "deep-openreview-research-ja"
version = "1.0.0"
description = "AIを活用した深い論文レビュー・分析エージェント（日本語ドキュメント） / AI-powered deep paper review and research agent with Japanese documentation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Yasu", email = "your-email@example.com"}
]
license = {text = "CC-BY-NC-SA-4.0"}
keywords = ["openreview", "paper-review", "ai-agent", "research", "llm", "langgraph", "meta-review", "deep-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jinja2>=3.1.6",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.3.11",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "openai>=1.66.3",
    "openreview-py>=1.40.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.2",
    "mypy>=1.13.0",
    "typing-extensions>=4.9.0",
    "pytest>=8.3.4",
    "httpx>=0.28.0",
    "pandas-stubs>=2.2.0",
]

[tool.mypy]
mypy_path = "app"
plugins = "pydantic.mypy"
python_version = "3.13"
check_untyped_defs = true
disallow_any_explicit = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
no_implicit_optional = true
show_error_context = true
show_column_numbers = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
exclude = [
    "^setup.py$",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]
reportMissingImports = false
reportMissingTypeStubs = false
